--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  font-size: 10.5px;
+  font-size: 10.3px;
+}
+
+@media(max-width:750px) {
+  body{
+    font-size:6px;
+  }
 }
