Updating Readme/credit page/Minor favicon change

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+
+p{
+  position:fixed;
+  margin-left: 1rem;
+  bottom: 0;
+}
+
+h4{
+  text-align: left;
+  margin-left: 1rem;
+}
